<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_menu"
        android:title="@string/dropdown"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/login"
                android:title="@string/login" />
            <item
                android:id="@+id/signup"
                android:title="@string/signup" />
            <item
                android:id="@+id/favorites"
                android:title="@string/favorites" />
        </menu>
    </item>
</menu>